# Promtx_Test

./: .dockerignore  .gitignore  .pre-commit-config.yml  README.md  add.py  azure-pipelines.yml  clean.py  commit.py  container.py  dev.compose.yml  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  remove.py  ruff.toml  server.py  sonar-project.properties  sync.py
.github/workflows/: build.yml
ZANACPTECLIENT/: Component-preload.js  Component.js  manifest.json  neo-app.json  resources.json
ZANACPTECLIENT/annotations/: annotations.xml
ZANACPTECLIENT/changes/: id_1532419264516_80_propertyChange.change  id_1538552624944_156_propertyChange.change  id_1538552627283_159_propertyChange.change
ZANACPTECLIENT/i18n/: i18n.properties
ZANACPTECLIENT/localService/: ZC_ANACPTECLIENT_CDS_VAN.xml  metadata.xml  mockserver.js
ZANALYSECRV/: Component-preload.js  Component.js  extended_runnable_file.html  manifest.json  neo-app.json  resources.json  sap-ui-cachebuster-info.json
ZANALYSECRV/annotations/: annotations.xml
ZANALYSECRV/changes/: changes-bundle.json
ZANOCOMPTABLE/: Component-preload.js  Component.js  manifest.json  neo-app.json  resources.json
ZBALANCEAGEE/: Component-preload.js  Component.js  extended_runnable_file.html  fioriHtmlRunner.html  manifest.json  resources.json
ZSUIVIORPHELINS/: Component-preload.js  Component.js
ZVAVAGCEDEPOS/: Component-preload.js  Component.js  manifest.json  neo-app.json  resources.json
ZVTEAVTECLOTURE/: Component-preload.js  Component.js  manifest.json  neo-app.json  resources.json
(+45 files in other folders)
